--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,16 @@
             <version>2.6.3</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.14.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring5</artifactId>
+            <version>3.0.14.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
